--- a/main.html
+++ b/main.html
@@ -25,10 +25,9 @@
 		</div>
 		
 		<div id="wrapper">
-			
-			
+
 			 <div class="fake_link" id="musics">Multimedia</div>
-			 <div class="fake_link" id="videos">Visuals</div>
+			 <div class="fake_link" id="videos">Logistics</div>
 			 <div class="fake_link" id="moments">Memories</div>
 			 <div class="fake_link" id="images">US</div>
 			 
@@ -38,7 +37,10 @@
 				 <div class="music">
 				 	<div id="ul_music" class="inner_ul">
 				 		<ol>
-				 			<li id="music0a">To Come : Music</li>
+				 			<li><?php 
+				 				var_dump(count($multimedia));
+				 			?></li>
+				 			<!--<li id="music0a">To Come : Music</li>
 				 			<li id="music0b">To Come : Video Games</li>
 				 			
 				 			<li id="music1">Kyary Pamyu Pamyu</li>
@@ -54,7 +56,7 @@
 				 			<li id="music8">The Decemberists</li>
 				 			<li id="music8">Pretty Lights</li>
 				 			<li id="music8">ThatGameCompany</li>
-				 			<li id="music8">Heroes of Might & Magic</li>
+				 			<li id="music8">Heroes of Might & Magic</li>-->
 				 		</ol>
 				 	</div>
 				 </div>	
